# invoice-exception-triage-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
data/expected_outputs/: amount_exceeds_po_invoice_audit.json  clean_invoice_audit.json  clean_invoice_audit.md  currency_mismatch_invoice_audit.json  duplicate_invoice_audit.json  missing_tax_id_invoice_audit.json  multiple_high_risk_flags_invoice_audit.json  multiple_high_risk_flags_invoice_audit.md  supplier_not_approved_invoice_audit.json
data/mock_erp/: approved_suppliers.json  processed_invoices.json  purchase_orders.json
data/sample_invoices/: amount_exceeds_po_invoice.json  clean_invoice.json  currency_mismatch_invoice.json  duplicate_invoice.json  missing_tax_id_invoice.json  multiple_high_risk_flags_invoice.json  supplier_not_approved_invoice.json
docs/: architecture.md  demo-script.md  submission-checklist.md
docs/codex-evidence/: codex-usage.md  prompt-log.md
openapi/: invoice-triage-api.yaml
src/invoice_agent/: __init__.py  __main__.py  api.py  audit_report.py  decision_engine.py  extraction.py  risk_rules.py
submission/: demo-recording-notes.md  devpost-project-copy.md  final-runbook.md  remediation-notes.md  screenshot-checklist.md  uipath-setup-status.md
submission/deck/: invoice-exception-triage-agent.pptx  presentation-outline.md
submission/demo/: demo-narration.json  (+2 more)
tests/: test_api.py  test_audit_report.py  test_decision_engine.py  test_expected_outputs.py  test_extraction.py  test_risk_rules.py
uipath/: api-workflow-contract.md  maestro-bpmn-notes.md  studio-web-setup.md
(+3 files in other folders)
