[project]
name = "invoice-exception-triage-agent"
version = "0.1.0"
description = "UiPath AgentHack prototype for deterministic invoice exception triage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentHack Prototype Team" }]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
invoice-triage = "invoice_agent.api:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

